# spyne

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
spyne/: Cargo.toml
spyne-crypto/: Cargo.toml
spyne-crypto/src/: lib.rs
spyne-crypto/src/hash/: sha1.rs
spyne-encoding/: Cargo.toml
spyne-encoding/spyne-net/: Cargo.toml
spyne-encoding/src/: lib.rs
spyne-encoding/src/serialization/: binary.rs  deserialize.rs  json.rs  mod.rs  serialize.rs
spyne-encoding/src/transfer/: base64.rs
spyne-ffi/: Cargo.toml
spyne-ffi/src/: lib.rs
spyne-ffi/src/c/: constants.rs  mod.rs  pty.rs  syscall.rs
spyne-ffi/src/c/linux/: mod.rs  pty.rs  syscalls.rs  wayland.rs
spyne-ffi/src/c/linux/epoll/: constants.rs  syscalls.rs  types.rs
spyne-ffi/src/c/linux/general/: constants.rs  functions.rs  mod.rs  syscalls.rs
spyne-ffi/src/c/linux/pty/: constants.rs  mod.rs  operations.rs
spyne-ffi/src/c/macos/: constants.rs  mod.rs  pty.rs  syscalls.rs
spyne-ffi/src/c/macos/general/: constants.rs  mod.rs  syscalls.rs
spyne-ffi/src/c/macos/graphics/: appkit.rs  core_graphics.rs  core_video.rs  metal.rs  mod.rs  objc_runtime.rs
spyne-ffi/src/c/macos/kqueue/: constants.rs  syscalls.rs  types.rs
spyne-ffi/src/c/macos/metal/: mod.rs  objc_runtime.rs
spyne-ffi/src/c/macos/pty/: constants.rs  mod.rs  operations.rs  syscalls.rs
spyne-ffi/src/c/vulkan/: mod.rs  vulk_gen.py
spyne-ffi/src/c/vulkan/codegen/: constants.py  vk_constants.py  vk_enums.py  vk_flags.py  vk_functions.py  vk_types.py  vk_utils.py  vulk_gen.py
spyne-ffi/src/c/vulkan/constants/: api_constants.rs  attachment_load_op.rs  attachment_store_op.rs  blend_factor.rs  blend_op.rs  command_buffer_level.rs  component_swizzle.rs  dynamic_state.rs  format.rs  front_face.rs  image_layout.rs  image_tiling.rs  image_type.rs  image_view_type.rs  index_type.rs  mod.rs  pipeline_bind_point.rs  polygon_mode.rs  primitive_topology.rs  result.rs  sharing_mode.rs  structure_type.rs  subpass_contents.rs  versions.rs
spyne-ffi/src/c/vulkan/functions/: buffer.rs  command_buffer.rs  device.rs  func_pointers.rs  image.rs  initialization.rs  instance.rs  memory.rs  mod.rs  (+8 more)
spyne-macros/: Cargo.toml
spyne-macros/src/: deserialize.rs  lib.rs  serialize.rs  shared.rs  vulkan_functions.rs
spyne-net/src/http/: mod.rs
spyne-net/src/http/h11/: mod.rs  send.rs  structures.rs
spyne-quote/: Cargo.toml
spyne-quote/src/: lib.rs  quote.rs
spyne-sync/: Cargo.toml
spyne-sync/src/: spsc.rs
spyne-syntax/: Cargo.toml
spyne-syntax/src/: ast.rs  lib.rs  parse.rs  tok_gen.rs  token.rs
spyne-text/: Cargo.toml
spyne-text/src/: lib.rs
spyne-text/src/buffer/: cursor.rs  gap_buffer.rs  mod.rs
spyne-text/src/fonts/atlas/: generator.rs  mod.rs  outline.rs  rasterizer.rs
spyne-text/src/fonts/parse/: constants.rs  mod.rs  parse.rs  structures.rs  test.rs
spyne-text/tests/: atlas.rs  parser.rs
spyne/src/: lib.rs
spyne/src/encoding/: mod.rs  serialization.rs  transfer.rs
spyne/src/encoding/serialization/: mod.rs
spyne/src/ffi/: mod.rs
spyne/src/ffi/c/: constants.rs  mod.rs  pty.rs  syscalls.rs
spyne/src/ffi/c/linux/: mod.rs
spyne/src/ffi/c/linux/epoll/: constants.rs  mod.rs  syscalls.rs  types.rs
spyne/src/ffi/c/linux/general/: constants.rs  mod.rs  syscalls.rs
spyne/src/ffi/c/linux/pty/: constants.rs  mod.rs  operations.rs
spyne/src/ffi/c/macos/: mod.rs
spyne/src/ffi/c/macos/general/: constants.rs  mod.rs  syscalls.rs
spyne/src/ffi/c/macos/graphics/: mod.rs
spyne/src/ffi/c/macos/kqueue/: constants.rs  mod.rs  syscalls.rs  types.rs
spyne/src/ffi/c/macos/pty/: constants.rs  mod.rs  operations.rs  syscalls.rs
spyne/src/gpu/: mod.rs  vulkan.rs
spyne/src/graphics/: mod.rs  vulkan.rs
spyne/src/graphics/windowing/: appkit.rs  mod.rs
spyne/src/io/: mod.rs
spyne/src/io/poll/: epoll.rs  kqueue.rs  mod.rs
spyne/src/macros/: mod.rs  quote.rs  serialization.rs
spyne/src/primitives/: mod.rs
spyne/src/primitives/serialization/: binary.rs  mod.rs
spyne/src/primitives/syntax/: ast.rs  mod.rs
spyne/src/primitives/text/: cursor.rs  gap_buffer.rs  mod.rs
spyne/src/serialization/: binary.rs  json.rs  mod.rs
spyne/src/sync/: mod.rs  spsc.rs
spyne/src/syntax/: ast.rs  mod.rs  tok_gen.rs  token.rs
spyne/src/syntax/macros/: mod.rs
spyne/src/text/: buffer.rs  cursor.rs  fonts.rs  gap_buffer.rs  mod.rs
spyne/src/text/buffer/: cursor.rs  gap_buffer.rs  mod.rs
spyne/src/text/buffers/: cursor.rs  gap_buffer.rs  mod.rs
spyne/src/text/fonts/: atlas.rs  constants.rs  mod.rs  parse.rs
spyne/src/text/fonts/atlas/: generator.rs  outline.rs  rasterizer.rs
spyne/src/text/fonts/parse/: mod.rs  parse.rs  structures.rs
spyne/tests/: fonts.rs  serialization.rs
src/: lib.rs
src/serialization/: binary.rs  mod.rs
src/syntax/: ast.rs  mod.rs  parse.rs  token.rs
src/syntax/macros/: mod.rs
src/text/: cursor.rs  gap_buffer.rs  mod.rs
(+100 files in other folders)
