[package]
name = "spyne"
version = "0.4.0"
edition = "2024"
description = "All-in-one toolkit"
license = "MIT"

[dependencies]
spyne-ffi = { path = "../spyne-ffi" }
spyne-macros = "0.1.1"
spyne-quote = "0.1.6"
spyne-syntax = "0.1.3"

[features]
ffi = []
ffi-c = ["ffi"]
ffi-c-constants = ["ffi", "ffi-c"]
ffi-c-pty = ["ffi", "ffi-c"]
ffi-c-syscalls = ["ffi", "ffi-c"]

macros = []
macros-quote = ["syntax"]
macros-serialization = ["serialization", "serialization-binary"]

serialization = []
serialization-binary = ["serialization"]

syntax = []
syntax-ast = ["syntax"]
syntax-tokgen = ["syntax"]
syntax-token = ["syntax"]

text = []
text-gapbuffer = ["text"]
text-cursor = ["text"]