[package]
name = "spyne"
version = "0.11.2"
edition = "2024"
description = "All-in-one toolkit"
license = "MIT"

[dependencies]
spyne-encoding = "0.1.0"
spyne-ffi = "0.6.5"
spyne-macros = "0.2.1"
spyne-sync = "0.1.1"
spyne-quote = "0.1.8"
spyne-syntax = "0.2.0"
spyne-text = "0.2.1"

[features]
encoding = []
encoding-transfer = ["encoding"]
encoding-transfer-base64 = ["encoding-transfer"]
encoding-serialization = ["encoding"]
encoding-serialization-binary = ["encoding-serialization"]
encoding-serialization-json = ["encoding-serialization"]

ffi = []
ffi-c = ["ffi"]
ffi-c-linux = ["ffi-c"]
ffi-c-linux-epoll = ["ffi-c-linux"]
ffi-c-linux-epoll-constants = ["ffi-c-linux-epoll"]
ffi-c-linux-epoll-syscalls = ["ffi-c-linux-epoll"]
ffi-c-linux-epoll-types = ["ffi-c-linux-epoll"]
ffi-c-linux-general = ["ffi-c-linux"]
ffi-c-linux-general-constants = ["ffi-c-linux-general"]
ffi-c-linux-general-syscalls = ["ffi-c-linux-general"]
ffi-c-linux-pty = ["ffi-c-linux"]
ffi-c-linux-pty-constants = ["ffi-c-linux-pty"]
ffi-c-linux-pty-operations = ["ffi-c-linux-pty"]
ffi-c-macos = ["ffi-c"]
ffi-c-macos-general = ["ffi-c-macos"]
ffi-c-macos-general-constants = ["ffi-c-macos-general"]
ffi-c-macos-general-syscalls = ["ffi-c-macos-general"]
ffi-c-macos-graphics = ["ffi-c-macos"]
ffi-c-macos-kqueue = ["ffi-c-macos"]
ffi-c-macos-kqueue-constants = ["ffi-c-macos-kqueue"]
ffi-c-macos-kqueue-syscalls = ["ffi-c-macos-kqueue"]
ffi-c-macos-kqueue-types = ["ffi-c-macos-kqueue"]
ffi-c-macos-pty = ["ffi-c-macos"]
ffi-c-macos-pty-constants = ["ffi-c-macos-pty"]
ffi-c-macos-pty-operations = ["ffi-c-macos-pty"]
ffi-c-macos-pty-syscalls = ["ffi-c-macos-pty"]

graphics = []
graphics-windowing = ["graphics"]
graphics-windowing-appkit = ["graphics-windowing"]
graphics-windowing-wayland = ["graphics-windowing"]

io = []
io-poll = ["io"]
io-poll-epoll = ["io-poll"]
io-poll-kqueue = ["io-poll"]

macros = []
macros-quote = ["syntax"]
macros-serialization = ["serialization", "serialization-binary"]

sync = []
sync-spsc = ["sync"]

serialization = []
serialization-binary = ["serialization"]

syntax = []
syntax-ast = ["syntax"]
syntax-tokgen = ["syntax"]
syntax-token = ["syntax"]

text = []
text-buffer = ["text"]
text-buffer-cursor = ["text-buffer"]
text-buffer-gapbuffer = ["text-buffer"]
text-fonts = ["text"]
text-fonts-atlas = ["text-fonts"]
text-fonts-parse = ["text-fonts"]